@@ -20368,6 +20368,14 @@
 "Cart.MD5" "56210a3b9ea6d5dd8f417a357ed8ca92"
 "Cart.Manufacturer" "Probe 2000, Roger Booth, Todd Marshall, Robbin Daniels, Jim Wickstead"
 "Cart.ModelNo" "3152VC"
+"Cart.Name" "Pursuit of the Pink Panther (Probe) (Prototype, bad dump)"
+"Cart.Note" "AKA Adventures of the Pink Panther"
+"Cart.Rarity" "Prototype"
+""
+
+"Cart.MD5" "62ee2b8f59e9cd6285bbdb674a952e8b"
+"Cart.Manufacturer" "Probe 2000, Roger Booth, Todd Marshall, Robbin Daniels, Jim Wickstead"
+"Cart.ModelNo" "3152VC"
 "Cart.Name" "Pursuit of the Pink Panther (Probe) (Prototype)"
 "Cart.Note" "AKA Adventures of the Pink Panther"
 "Cart.Rarity" "Prototype"
